--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,36 @@
 /* The side navigation menu */
 .sidenav {
   height: 100%;
-  width: 200px;
+  width: 15%;
+    display: block;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
+    overflow: auto;
   background-color: #111;
-  overflow-x: hidden;
   padding-top: 20px;
+    
+}
+.container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+.container:hover {
+      color: #f1f1f1;
+}
+
+.wrapper {
+    display:flex;
+    flex-direction:row;
 }
 
 .sidenav a {
@@ -25,6 +47,41 @@
 }
 
 .sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.clsdsidenav {
+  height: 100%;
+  width: 0%;
+    display: block;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+    overflow: auto;
+  background-color: #111;
+  padding-top: 20px;
+    padding-left: 20px;
+}
+
+.clsdsidenav a {
+  padding: 8px 8px 8px 8px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+.clsdsidenav a:hover {
+  color: #f1f1f1;
+}
+
+
+.clsdsidenav .openbtn {
   position: absolute;
   top: 0;
   right: 25px;
